--- a/Gallery/MainWindow.xaml
+++ b/Gallery/MainWindow.xaml
@@ -51,9 +51,9 @@
         <Grid Grid.Row="1" Grid.Column="1">
             <ScrollViewer VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                <Canvas Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                         AllowDrop="True" >
-                    <Image Source="{Binding WorkspaceImage}" />
+                    <Image   Source="{Binding WorkspaceImage}" Width="{Binding Path=ActualWidth, ElementName=canvas}" Height="{Binding Path=ActualHeight, ElementName=canvas}" Stretch="Uniform" />
 
                 </Canvas>
             </ScrollViewer>
