--- a/Gallery/MainWindow.xaml
+++ b/Gallery/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:Gallery"
         mc:Ignorable="d"
         Title="Gallery" Height="350" Width="525">
+    <Window.DataContext>
+        <local:ViewModel x:Name="_model" />
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="235"/>
@@ -37,6 +40,10 @@
                     </StackPanel>
                 </Button>
             </StackPanel>
+                <StackPanel>
+    <Image Source="{Binding DisplayedImagePath}" />
+    <TextBlock Text="{Binding DisplayedImagePath}" />
+</StackPanel>
             <ScrollViewer Margin="0 40 0 0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                 <ListView Margin="5 0 0 5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
@@ -53,8 +60,8 @@
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                 <Canvas Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                         AllowDrop="True" >
-                    <Image   Source="{Binding WorkspaceImage}" Width="{Binding Path=ActualWidth, ElementName=canvas}" Height="{Binding Path=ActualHeight, ElementName=canvas}" Stretch="Uniform" />
-
+                    <Image Source="{Binding WorkspaceImage}" Stretch="Fill" >
+                    </Image>
                 </Canvas>
             </ScrollViewer>
         </Grid>
