--- a/Gallery/ToolsMenu.xaml
+++ b/Gallery/ToolsMenu.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="80" d:DesignWidth="550">
 
-    <Grid Background="LightGray">
+    <Grid Background="LightGray" HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
