--- a/Gallery/MainWindow.xaml
+++ b/Gallery/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:local="clr-namespace:Gallery"
         mc:Ignorable="d"
         Title="Gallery" Height="350" Width="525">
@@ -16,8 +18,8 @@
             <RowDefinition Height="80" />
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <local:ToolsMenu Grid.ColumnSpan="2" Grid.Row="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                         Width="{Binding Width, ElementName=window}">
+        <local:ToolsMenu Grid.ColumnSpan="2" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left"
+                         Width="{Binding ActualWidth, ElementName=window}">
         </local:ToolsMenu>
             <Grid Grid.Row="1" Grid.Column="0">
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top" Orientation="Horizontal">
@@ -61,13 +63,15 @@
             </ScrollViewer>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="1">
-            <ScrollViewer VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
+            <ScrollViewer Padding="5 5 0 0" Margin="0 0 0 5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <Canvas Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
-                        AllowDrop="True" >
-                    <Image   Source="{Binding WorkspaceImage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="UniformToFill" />
+                <Grid Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                        AllowDrop="True">
+                    
+                        <Image Name="CanvasImage" Source="{Binding WorkspaceImage}" 
+                           HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="None" />
                     <ContentPresenter Content="{Binding CanvasContent}"/>
-                </Canvas>
+                </Grid>
             </ScrollViewer>
         </Grid>
     </Grid>
