--- a/Gallery/MainWindow.xaml
+++ b/Gallery/MainWindow.xaml
@@ -46,9 +46,6 @@
                         <DataTemplate>
                             <Border Margin="5" BorderThickness="1" BorderBrush="SteelBlue" CornerRadius="4">
                                 <Grid Margin="3">
-                                    <Grid.InputBindings>
-                                        <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding DataContext.OpenFromFav}" CommandParameter="{Binding ElementName=lista, Path=SelectedIndex}" />
-                                    </Grid.InputBindings>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"/>
                                         <RowDefinition/>
@@ -57,7 +54,11 @@
                                         <ColumnDefinition Width="auto" SharedSizeGroup="ikona" />
                                         <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Grid.Column="1" FontWeight="Bold" Text="{Binding Path=Name}"/>
+                                    <TextBlock Grid.Column="1" FontWeight="Bold" Text="{Binding Path=Name}">
+                                        <TextBlock.InputBindings>
+                                            <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenFromFav}" CommandParameter="{Binding ElementName=lista, Path=SelectedIndex}" />
+                                        </TextBlock.InputBindings>
+                                    </TextBlock>
                                     <Image Margin="0,0,5,0" Grid.RowSpan="2" MaxHeight="64" Source="{Binding Path=ImagePath}"/>
                                 </Grid>
                             </Border>
