--- a/Gallery/MainWindow.xaml
+++ b/Gallery/MainWindow.xaml
@@ -71,7 +71,7 @@
         <Grid Grid.Row="1" Grid.Column="1">
             <ScrollViewer Padding="5 5 0 0" Margin="0 0 0 5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <Grid Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                <Grid Name="canvas" HorizontalAlignment="Left" VerticalAlignment="Top" Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"
                         AllowDrop="True">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseLeftButtonDown">
